# ATSuite

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
atsuite/: analyzer.py  con_invoker.py  deploy.py  function.py  invoker.py  pipeline.py  runtime.py  scheduler.py  state_snapshot.py  uid_strategy.py  utils.py
atsuite/ali/: ali.py  fc.py  oss.py  sls.py
atsuite/analysis/: __init__.py  aggregation.py  api.py  collectors.py  export.py  model.py  observer.py  pricing.py  timeline.py
atsuite/aws/: Agentcore.py  CloudWatch.py  Lambda.py  __init__.py  aws.py  s3.py
atsuite/cli/: __init__.py  build_docker_images.py  concurrency.py  deploy.py  invoker.py  trace_viewer_metadata.py  trace_viewer_server.py
atsuite/faas/: __init__.py  config.py  function.py
atsuite/gcp/: fc.py  gcp.py  storage.py
atsuite/mcp/: __init__.py  config.py  mcp.py
atsuite_sdk/: __init__.py  abstract.py  function.py  gcs.py  mcp_server.py  state.py  storage.py  workflow.py
benchmarks/ClaudeCodeReview/: README.md  task_prompt.md
benchmarks/DataSciBench/: readme.md
benchmarks/GeoItineraryPlanner/: readme.md
benchmarks/ScientificComputation/: readme.md
benchmarks/legacy/: README.md
dockerfiles/: entrypoint.sh  python_installer.sh
docs/: AGENT_TOOL_CONVERSION_GUIDE.md  README.md  README.zh.md  ali.md  ali_code.md  azure.md  e2b.md  gcp.md  sebs_architecture_analysis.md  timeline.md  wassette.md  workflow_spec.md
docs/atg/: node_config.md  node_config.zh.md  tool_conversion.md  tool_conversion.zh.md  workflow_spec.md
tests/: test_analysis_v2.py  test_build_cli.py  test_runtime_refactor.py
tools/: build.py  deploy.py  invoker.py  trace_viewer_server.py
(+165 files in other folders)
