[project]
name = "atsuite"
version = "0.1.0"
description = "Agent Tool Service infrastructure benchmark suite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-sls20201230==5.12.1",
    "fastapi>=0.128.0",
    "fastmcp>=2.13.2",
    "langchain>=1.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "mcp>=1.23.3",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
]

[project.scripts]
atsuite-build = "atsuite.cli.build_docker_images:main"
atsuite-deploy = "atsuite.cli.deploy:main"
atsuite-replay = "atsuite.cli.invoker:main"
atsuite-concurrency = "atsuite.cli.concurrency:main"
atsuite-trace-viewer = "atsuite.cli.trace_viewer_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["atsuite*", "atsuite_sdk*"]

[dependency-groups]
aliyun = [
  "alibabacloud-darabonba-stream>=0.0.2",
  "alibabacloud-fc20230330==4.6.6",
  "alibabacloud-oss-v2>=1.2.2",
  "aliyun-fc2>=2.5.2",
  "aliyun-python-sdk-core>=2.16.0",
]
aws = [
  "boto3>=1.34.0",
  "awscli>=1.32.0",
]
dev = [
    "matplotlib>=3.10.8",
]

gcp = [
  "google-api-python-client>=2.0.0",
  "google-auth>=2.26.0",
  "google-cloud-storage>=2.0.0",
  "google-cloud-monitoring>=2.0.0",
  "google-cloud-logging>=2.0.0",
  "google-cloud-workflows>=1.10.0",
  "google-cloud-datastore>=2.0.0",
]

openai = []

[tool.uv]
default-groups = ["aliyun"]
